# w4113

./: .gitignore  Keyboard.maxpat  README.md  Resume 2023.pages  console.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tv.html  vite.config.ts  w4113-guide.docx
.VSCodeCounter/2023-11-28_22-36-04/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/: dependabot.yml
.github/workflows/: test-on-push.yml
public/config/: MacBook.json  airpods.json  default copy.json  default.json  scarlett.json
src/: App.css  App.tsx  console.tsx  globals.css  main.ts  main.tsx  store.ts  tv.ts  tv.tsx
src-tauri/: .taurignore  Cargo.toml  public  tauri.conf.json  test.json
src-tauri/assets/config/: bonin reaver.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  delay.rs  granulizer.rs  hotkey.rs  interface.rs  main.rs  midi.rs  stereo_cross_feedback.rs
src-tauri/src/audio/: mod.rs  plugin.rs  thread.rs
src-tauri/src/tv/: mod.rs
src/bindings/: Command.ts  ConfigUpdate.ts  ConsoleMessage.ts  Control.ts  FreqMessage.ts  Key.ts  MessageKind.ts  Mod.ts
src/console/: App.svelte  AudioSettings.svelte  Console.css  Console.tsx  Frame.css  Frame.tsx  KeyboardSettings.svelte  Midi.css  Midi.tsx  MidiSettings.svelte  Sampler.svelte  Settings.css  Settings.tsx  Tempo.svelte  settings.css
src/console/components/: ContextMenu.svelte  Frame.svelte  Frame.tsx
src/console/menu/: Keyboard.tsx  Midi.tsx  Settings.tsx  Terminal.tsx
src/console/rack/: Effect.svelte  Input.svelte  Output.svelte  Rack.svelte  Strip.svelte
src/console/rack/effects/: Gain.svelte
src/console/settings/: AudioSettings.svelte  KeyboardSettings.svelte  MidiSettings.svelte  settings.css
src/console/ui/: Frame.tsx
src/tv/: App.svelte  TV.css  TV.tsx
src/tv/visualizers/: BasicVisualizer.css  BasicVisualizer.tsx
