[package]
name = "w4113"
version = "0.0.0"
description = "w4113"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "window-start-dragging", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15.2"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", features = ["colored"] }
log = "^0.4"
ts-rs = "7.0.0"
lazy_static = "1.4.0"
midir = "0.9.1"
rodio = "0.17.3"
hidapi = { version = "2.4.1", features = ["macos-shared-device"] }
tdpsola = "0.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
